Update Swift versions for Travis CI. (#48)
Updates the latest version of Swift 4, adds the latest stable Swift 5, and updates the development snapshot.

URLs from https://swift.org/download/#snapshots

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ branches:
 
 matrix:
   include:
-    - name: "OS X / Xcode 10.1"
+    - name: "OS X / Xcode 10.2"
       os: osx
-      osx_image: xcode10.1
+      osx_image: xcode10.2
       language: swift
       before_script:
         - wget https://github.com/protocolbuffers/protobuf/releases/download/v3.6.1/protoc-3.6.1-osx-x86_64.zip
@@ -18,16 +18,40 @@ matrix:
       script:
         - swift test
 
-    - name: "Ubuntu 16.04 / Swift 4.2.2"
+    - name: "OS X / Xcode 11.0"
+      os: osx
+      osx_image: xcode11
+      language: swift
+      before_script:
+        - wget https://github.com/protocolbuffers/protobuf/releases/download/v3.6.1/protoc-3.6.1-osx-x86_64.zip
+        - unzip protoc-3.6.1-osx-x86_64.zip
+      script:
+        - swift test
+
+    - name: "Ubuntu 16.04 / Swift 4.2.4"
       os: linux
       dist: xenial
       language: c
       before_script:
         - wget https://github.com/protocolbuffers/protobuf/releases/download/v3.6.1/protoc-3.6.1-linux-x86_64.zip
         - unzip protoc-3.6.1-linux-x86_64.zip
-        - wget https://swift.org/builds/swift-4.2.2-release/ubuntu1604/swift-4.2.2-RELEASE/swift-4.2.2-RELEASE-ubuntu16.04.tar.gz
-        - tar xzf swift-4.2.2-RELEASE-ubuntu16.04.tar.gz
-        - export PATH=$(pwd)/swift-4.2.2-RELEASE-ubuntu16.04/usr/bin:"${PATH}"
+        - wget https://swift.org/builds/swift-4.2.4-release/ubuntu1604/swift-4.2.4-RELEASE/swift-4.2.4-RELEASE-ubuntu16.04.tar.gz
+        - tar xzf swift-4.2.4-RELEASE-ubuntu16.04.tar.gz
+        - export PATH=$(pwd)/swift-4.2.4-RELEASE-ubuntu16.04/usr/bin:"${PATH}"
+        - swift --version
+      script:
+        - swift test
+
+    - name: "Ubuntu 16.04 / Swift 5.0.1"
+      os: linux
+      dist: xenial
+      language: c
+      before_script:
+        - wget https://github.com/protocolbuffers/protobuf/releases/download/v3.6.1/protoc-3.6.1-linux-x86_64.zip
+        - unzip protoc-3.6.1-linux-x86_64.zip
+        - wget https://swift.org/builds/swift-5.0.1-release/ubuntu1604/swift-5.0.1-RELEASE/swift-5.0.1-RELEASE-ubuntu16.04.tar.gz
+        - tar xzf swift-5.0.1-RELEASE-ubuntu16.04.tar.gz
+        - export PATH=$(pwd)/swift-5.0.1-RELEASE-ubuntu16.04/usr/bin:"${PATH}"
         - swift --version
       script:
         - swift test
@@ -39,9 +63,9 @@ matrix:
       before_script:
         - wget https://github.com/protocolbuffers/protobuf/releases/download/v3.6.1/protoc-3.6.1-linux-x86_64.zip
         - unzip protoc-3.6.1-linux-x86_64.zip
-        - wget "https://swift.org/builds/development/ubuntu1604/swift-DEVELOPMENT-SNAPSHOT-2019-02-19-a/swift-DEVELOPMENT-SNAPSHOT-2019-02-19-a-ubuntu16.04.tar.gz"
-        - tar xzf swift-DEVELOPMENT-SNAPSHOT-2019-02-19-a-ubuntu16.04.tar.gz
-        - export PATH=$(pwd)/swift-DEVELOPMENT-SNAPSHOT-2019-02-19-a-ubuntu16.04/usr/bin:"${PATH}"
+        - wget "https://swift.org/builds/development/ubuntu1604/swift-DEVELOPMENT-SNAPSHOT-2019-07-03-a/swift-DEVELOPMENT-SNAPSHOT-2019-07-03-a-ubuntu16.04.tar.gz"
+        - tar xzf swift-DEVELOPMENT-SNAPSHOT-2019-07-03-a-ubuntu16.04.tar.gz
+        - export PATH=$(pwd)/swift-DEVELOPMENT-SNAPSHOT-2019-07-03-a-ubuntu16.04/usr/bin:"${PATH}"
         - swift --version
       script:
         - swift test
